applications/kommander-flux/2.6.1/mirror/flux-oci-mirror.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flux-oci-mirror
  labels:
    app: flux-oci-mirror
spec:
  selector:
    matchLabels:
      app: flux-oci-mirror
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flux-oci-mirror
    spec:
      volumes:
        - name: mirror-ca-bundle
          secret:
            secretName: flux-oci-mirror-config
        - name: proxy-ca
          secret:
            secretName: flux-oci-mirror-ca-secret
      containers:
        - name: flux-oci-mirror
          image: mhrabovcin/flux-oci-mirror:dev
          imagePullPolicy: IfNotPresent
          args:
            - -config-dir
            - /config
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 8080
              name: proxy
          volumeMounts:
            - name: mirror-ca-bundle
              mountPath: /config
            - name: proxy-ca
              mountPath: /config/proxy-ca
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: flux-oci-mirror
spec:
  selector:
    app: flux-oci-mirror
  type: ClusterIP
  ports:
    - name: proxy
      protocol: TCP
      port: 8080
      targetPort: proxy
