applications/kommander-flux/2.6.1/mirror/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-source-controller-oci-mirror
spec:
  podSelector:
    matchLabels:
      app: flux-oci-mirror

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector: {}
